[package]
name = "rmms-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
arrayvec = "0.7.2"
bytemuck = "1.13.1"
cpal = "0.15.2"
hound = "3.5.0"
once_cell = "1.17.1"
parking_lot = "0.12.1"
rb = "0.4.1"
rubato = "0.12.0"
atomic_float = "0.1.0"
spin_sleep = "1.1.1"

[dependencies.symphonia]
# version = "0.5.2"
git = "https://github.com/pdeljanov/Symphonia.git"
default-features = false
features = [
    "pcm",
    "wav",
    "aac",
    "aiff",
    "flac",
    "ogg",
    "vorbis",
    "adpcm",
    "mp3",
]

